adding instrumentation test

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,10 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_width="match_parent"
+>
+
+
+<androidx.constraintlayout.widget.ConstraintLayout
+
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
     tools:context=".MainActivity"
     android:padding="16dp"
     >
@@ -28,11 +35,14 @@
         app:layout_constraintTop_toTopOf="parent"
         android:inputType="numberDecimal"
         android:hint="@string/cost_of_service"
+
         >
 
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:inputType="numberDecimal"
+            />
 
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -163,3 +173,5 @@ app:layout_constraintTop_toBottomOf="@id/cost_of_service_edit_text"
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+
+</ScrollView>
